cluster/apps/tig/telegraf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-x509-deployment
  namespace: tig
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
        - name: telegraf-x509
          image: telegraf:1.29.0-alpine
          volumeMounts:
            - name: config
              mountPath: /etc/telegraf/telegraf.conf
              subPath: telegraf.conf
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: telegraf-config-map
