cluster/apps/tig/grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: tig
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana-oss:9.3.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: tig
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 3000
      port: 3000
      protocol: TCP
  selector:
    app: grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: tig
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: grafana.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
  tls:
    - hosts:
        - grafana.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: grafana-tls
